Fix hidden headlines covering links (#20)
Travis failures are external URL timeouts. I checked them manually.

--- a/css/hellothisistim.css
+++ b/css/hellothisistim.css
@@ -134,7 +134,8 @@ nav > h2,
 #legal >h2 {
     position: absolute;
     text-indent: -9999px;
-    text-align: left;    
+    text-align: left;
+    width: 0px; /* Avoids hidden text headlines from blocking links. */
 }
 
 /* -------------------------------------------------------------------
